# kafkaorg

./: .dockerignore  .gitignore  .npmrc  .pnpmfile.cjs  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_COMPARISON.md  DATABASE.md  DESIGN.md  DESIGN_MULTI_AGENT.md  Dockerfile  IMPLEMENTATION_PLAN.md  MANIFEST.md  MIGRATION_COMPLETE.md  MIGRATION_PLAN.md  PRODUCT_NOTES.md  QUICKSTART_MULTI_AGENT.md  README.md  README_BUILD.md  README_KAFKA_ADMIN.md  README_POSTGRES_ADMIN.md  README_REFACTOR.md  REFACTOR_DOCMEM_INTEGRATION.md  REFACTOR_GUIDE.md  SPEC_AGENT_COMMUNICATIONS.md  SPEC_DOCMEM.md  SPEC_DOCMEM_ATOMICITY.md  SPEC_DOCMEM_SERIALIZATION.md  app.py  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  vitest.config.ts
.claude/: settings.local.json
.cursor/rules/: no-migrations.mdc
config/: server.properties.template
db/: schema.sql  schema_old.sql  seed_agent_prototypes.sql
kafkaorg/: __init__.py  __main__.py  db.py  models.py
pjpd/: ideas.txt  kafkaorg.txt
prisma/: schema.prisma  seed.ts
scripts/: rebuild-database-multi-agent.ps1  rebuild-database.ps1  start-services.sh  stop-server.ps1  update-seed-prompt.ts
src/: index.ts  interpreter.ts  openapi.ts
src/agents/: BaseAgent.ts  ConversationalAgent.ts  OpenRouterAPI.ts  UIAgent.ts
src/bash/: SPEC_COMMAND_PARSER.md  bash_root_prompt.ts  command.pegjs  command_parser.d.ts  command_parser.js  index.ts  interpreter.ts  test_command_parser.html
src/db/: client.ts  (+1 more)
static/: conversation.html  docmem.html  home.html  index.html  monitor.html  signup.html  welcome.html
test/: docmem-expand.test.ts
(+40 files in other folders)
