[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kafkaorg"
version = "0.1.0"
description = "Kafka Organization Manager - Playground for orchestrating AI agents using Kafka, LangGraph, and LangChain"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
]

[project.scripts]
kafkaorg-dev = "kafkaorg.__main__:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["kafkaorg"]
